Feature EPL-1417: Change the way to access to the HTML file.